traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:27: error: ';' expected but 'else' found.
  else
  ^